# cpp-logfmt

./: .gitignore  Dockerfile  Dockerfile.arm  Dockerfile.focal  Logfmt.h  README.md  arm_build_and_action.sh  arm_create_package.sh  build_and_action.sh  build_and_package.sh  clean.sh  create_package.sh  exec.sh  test.cpp  upload_packages.sh
.circleci/: config.yml
cpp-logfmt/: CMakeLists.txt  README.md
cpp-logfmt/src/: Logfmt.h  test.cpp
cpp-logfmt/test/: test_logfmt_util.cpp
kin_logfmt/: CMakeLists.txt
kin_logfmt/include/: file_stream.h  kin_logfmt.h  logfmt_kv.h  logger.h  logger_impl.h
kin_logfmt/src/: file_stream.cpp  kin_logfmt.cpp  logger.cpp
kin_logfmt/test/: test_logger.cpp
